[workspace]

members = [
    "auth",     # About authorization
    "oneone",   # Things needed from Twitter API v1.1
    "veetwo",   # Things needed from Twitter API v2
    "cmdl",     # Queries from the command line
    "follies",  # A service for tracking followers
    "graphf",   # Gather social network data for analysis
]
