[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from_file = "0.1.3"
from_file_derive = "0.1.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
thiserror = "1.0.44"
